# fastapi-boilerplate-agent

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  OPENSOURCE_CHECKLIST.md  README.md  SECURITY.md  init_fastapi_boilerplate_agent.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: sample_request.txt
scripts/: release.sh
src/fastapi_boilerplate_agent/: cli.py  config.py  graph.py  tools.py
src/fastapi_boilerplate_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
